# Chess

./: CMakeLists.txt  main.cpp
Controlers/: PiecesController.cpp  PiecesController.hpp
Pieces/: Piece.cpp  Piece.hpp  Rook.cpp  Rook.hpp
UI/: SimpleBoardDrawer.cpp  SimpleBoardDrawer.hpp  Window.cpp  Window.hpp
UI/Boards/: SimpleBoardDrawer.cpp  SimpleBoardDrawer.hpp  Square.cpp  Square.hpp
